--- a/services.html
+++ b/services.html
@@ -103,7 +103,7 @@
 
       <div class="center-text services-background"> 
         <img src="images/yoga/support group 2.jpg" width="300px"alt="">
-        <h1 class="color-vision"><strong>Support Group</strong></h1>
+        <h1 class="color-vision"><strong>Vinyasa Yoga</strong></h1>
         <p>
           In addition to our yoga classes, we   
           are proud to offer a supportive  
@@ -120,7 +120,7 @@
       
       <div class="center-text services-background">
         <img src="images/yoga/woman meditating.jpg" width="300px" alt="">
-        <h1 class="color-vision"><strong>Kundalini</strong></h1>
+        <h1 class="color-vision"><strong>Hatha Yoga</strong></h1>
         <p>
         Join our "Mom Yoga" class, designed   
         to help mothers reduce stress, promote  
@@ -134,15 +134,15 @@
 
       <div class="center-text services-background">
         <img src="images/yoga/woman meditating.jpg" width="300px" alt="">
-        <h1 class="color-vision"><strong>Kundalini</strong></h1>
+        <h1 class="color-vision"><strong>Encouragement Circle</strong></h1>
         <p>
-        Join our "Mom Yoga" class, designed   
-        to help mothers reduce stress, promote  
-        relaxation, and boost overall   well-being.   
-        You'll leave feeling rejuvenated and ready  
-        to take on the day. Join our supportive   
-        community of fellow moms for an uplifting   
-        experience! 
+          Join our post-class encouragement circle,  
+          a safe and welcoming space where  
+          you can connect with other single  
+          mothers, share your experiences, and  
+          bond over common challenges and triumphs.  
+          
+        </p>
         </p>
       </div>
 
