corporate edit names

--- a/corporate.html
+++ b/corporate.html
@@ -82,15 +82,17 @@
           <h2 id="general">General Information</h2>
           <p>
             This branded website is publicly available at
-            <a href="https://buas-media-interactive.github.io/">buas-media-interactive.github.io/my-website</a>
-            <em>(please change text <strong>and</strong> hyperlink destination)</em>
+            <a href="https://femmeunity.github.io/website/">femmeunity.github.io/website</a>
           </p>
           <p>
-            This website was created by&hellip; <em>(only students listed below will be graded!)</em>
+            This website was created by: </em>
           </p>
           <ol>
-            <li>Student (ID: 000000)</li>
-            <li>Student (ID: 000000)</li>
+            <li>Theresia Drooduin (211883)</li>
+            <li>Guusje Bossers (210057)</li>
+            <li>Mirza Ljuca (204181)</li>
+            <li>Vanessa Sedda (211797)</li>
+            
           </ol>
           <!-- End General -->
 
@@ -110,7 +112,7 @@
             <tbody>
               <tr>
                 <th scope="row">1.</th>
-                <td>000000</td>
+                <td>211883</td>
                 <td>Value</td>
                 <td>
                   <a href="index.html">Content title</a>
@@ -118,7 +120,7 @@
               </tr>
               <tr>
                 <th scope="row">2.</th>
-                <td></td>
+                <td>210057</td>
                 <td></td>
                 <td>
                   <a href="#"></a>
@@ -126,7 +128,7 @@
               </tr>
               <tr>
                 <th scope="row">3.</th>
-                <td></td>
+                <td>204181</td>
                 <td></td>
                 <td>
                   <a href="#"></a>
@@ -134,7 +136,7 @@
               </tr>
               <tr>
                 <th scope="row">4.</th>
-                <td></td>
+                <td>211797</td>
                 <td></td>
                 <td>
                   <a href="#"></a>
