Background video instead of image

--- a/index.html
+++ b/index.html
@@ -56,21 +56,26 @@
     </nav>
     <!-- End of navigation bar -->
 
-    <div class="image-div">
-      <div class="floating-text">
-        <h1 class="floating-text-content"><strong>Welcome</strong></h1>
-        <p class="floating-text-content">
+    <video id="background-video" autoplay loop muted poster="images/yoga/poster.jpg">
+      <source src="images/yoga/ocean video.mp4" type="video/mp4">
+    </video>
+        
+    <div class="floating-text">
+      <h1 class="floating-text-content"><strong>Welcome</strong></h1>
+      <p class="floating-text-content">
         Transform your mind, body and spirit with our yoga <br> community designed exclusively for single moms. <br>
         Together, let's create a supportive and uplifting <br> space to grow and thrive.
-        </p>
-      </div>
-      <div class="socials">
-        <a href="http://www.instagram.com/thefemmeunity"><img src="images/icons/instagramw.svg" width="30px" alt=""></a>
-        <a href="http://www.facebook.com/profile.php?id=100089538574047"><img src="images/icons/facebookw.svg" width="30px" alt=""></a>
-        <a href="http://www.linkedin.com/in/femme-unity-19049526b/"><img src="images/icons/linkedinw.svg" width="30px" alt=""></a>
-        <a href="mailto:contactfemmeunity@gmail.com"><img src="images/icons/mailw.png" width="30px" alt=""></a>
-      </div>
+      </p>
     </div>
 
+    <div class="socials">
+      <a href="http://www.instagram.com/thefemmeunity"><img src="images/icons/instagramw.svg" width="30px" alt=""></a>
+      <a href="http://www.facebook.com/profile.php?id=100089538574047"><img src="images/icons/facebookw.svg" width="30px"
+          alt=""></a>
+      <a href="http://www.linkedin.com/in/femme-unity-19049526b/"><img src="images/icons/linkedinw.svg" width="30px"
+          alt=""></a>
+      <a href="mailto:contactfemmeunity@gmail.com"><img src="images/icons/mailw.png" width="30px" alt=""></a>
+    </div>
+    
   </body>
 </html>
