--- a/corporate.html
+++ b/corporate.html
@@ -9,6 +9,7 @@
 
     <!-- Own Styles -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Chicle">
 
     <!-- Bootstrap Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -47,6 +48,7 @@
 
     <header class="py-2 py-md-4 py-lg-5 text-center container-fluid bg-gradient text-light">
       <h1 class="fw-light">Corporate information</h1>
+      
     </header>
 
     <main class="container-fluid container-xl">
