marketing: changed promotional activity and reach objective

--- a/corporate.html
+++ b/corporate.html
@@ -220,9 +220,10 @@
             <b>Vision</b>
             <p>In a world where single middle-aged moms often lack support, we believe that creating support and connection is essential. So, they can navigate the challenges of single motherhood with resilience and confidence. 
               Creating a supportive and inclusive community of single middle-aged moms that offer each other emotional support, encouragement, and knowledge and advice, to help each other succeed in all areas of life. </p>
-
+             
              <b>Promotional activies and Objectvies</b>
-             <i>Reach Objective</i>
+             <p><i>Reach objective</i></p>
+          
              <p>Our reach objective for Femme-Unity’s social media platform is to reach a total number of 200 followers on Instagram by April 14th, 2023. This will be measured by tracking the total number of followers on the platform using their analytics tools. This objective will be achieved through target social media marketing campaign aimed at middle-aged single women living in the Netherlands, with a focus on creating engaging content, using hashtags, writing relatable captions, building relationships with followers, and promoting the benefits of Femme-Unity’s yoga classes and community. </p>
             <i>Affect objective</i>
             <p>Our affect objective for Femme-Unity’s social media campaign is to create a sense of connection and understanding with our target audience of working middle-aged single moms living in the Netherlands. This will be measured through likes. Our goal is to receive a total of 75 likes across our platform by the end of April 2023. This objective will be achieved by creating authentic and relatable content that resonates with our target audience, actively engaging with followers through comments, and monitoring and adjusting our social media strategy based on audience feedback and engagement data.  </p>
