changed the vision in the marketing

--- a/corporate.html
+++ b/corporate.html
@@ -263,8 +263,7 @@
           
          <i>What do we want to communicate?</i>
          <p>Our vision: </p>
-         <p>In a world where single middle-aged moms often lack support, we believe that creating support and connection is essential. So, they can navigate the challenges of single motherhood with resilience and confidence. 
-          Creating a supportive and inclusive community of single middle-aged moms that offer each other emotional support, encouragement, and knowledge and advice, to help each other succeed in all areas of life. </p>
+         <p>In a world where single middle-aged moms are facing the challenges of motherhood alone, we believe that creating support and connection between them is essential, creating a community that uplifts, empowers, and inspires. </p>
 
          <i>At what times does your target audience visit social media platforms/websites? </i>
          <p>Our target audience both has kids and works. They have busy schedules and therefore don’t have a lot of time for social media. The times at which they visit social media platforms would be mostly when they want to quickly check something during the day such as friends' stories or perhaps post their own status update on Facebook during a work break. During the evenings when the kids have gone to bed, and they finished working is their time in the day that they usually check social media more extensive.</p>
