edit services page

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
       <div class="floating-text center-text">
         <h1 class="color-vision"><strong>Our Vision</strong></h1>
         <p class="floating-text-content">
-        "Create a supportive and <br> inclusive community of single <br>
+        "Creating a supportive and <br> inclusive community of single <br>
         middle-aged moms that offer <br> each other emotional support, <br> 
         encouragement, knowledge <br> 
         and advice, to help each other <br>
@@ -73,7 +73,7 @@
         <h1 class="color-vision"><strong>Our Values</strong></h1>
         <p class="floating-text-content color-vision">
         Fostering a sense of community <br> Providing a safe space <br>
-        Inclusivity 
+        Prioritizing self-care <br> Inclusivity
         </p>
       </div>
       
