--- a/services.html
+++ b/services.html
@@ -62,78 +62,65 @@
         <img src="images/yoga/woman meditating.jpg" width="300px" alt="">
         <h1 class="color-vision"><strong>Mom Yoga</strong></h1>
         <p>
-        Join our "Mom Yoga" class, designed 
-        to help mothers reduce stress, promote 
-        relaxation, and boost overall   well-being. 
-        You'll leave feeling rejuvenated and ready 
-        to take on the day. Join our supportive  
-        community of fellow moms for an uplifting 
-        experience!  
+        Join our Mom Yoga class, designed to help mothers reduce 
+        stress, promote relaxation, and boost overall well-being. 
+        You'll leave feeling rejuvenated and ready to take on 
+        the day. Join our supportive community of fellow moms 
+        for an uplifting experience!  
         </p>
       </div>
       <div class="center-text services-background">
         <img src="images/yoga/beach yoga.jpg" width="300px"alt=""> 
-        <h1 class="color-vision"><strong>Outdoor Yoga</strong></h1>
+        <h1 class="color-vision"><strong>Beach Yoga</strong></h1>
         <p class="floating-text-content-services">
-        Join our "Outdoor Yoga" class for a  
-        unique experience connecting with 
-        nature. Led by experienced instructors, 
-        this invigorating class will enhanc
-        your practice and provide a peaceful  
-        escape amidst the beauty of the great  
-        outdoors. Come join us and find your zen  
-        in nature! 
+        Join our Beach Yoga class for a unique experience connecting 
+        with nature. Led by experienced instructors, this 
+        invigorating class will enhance your practice 
+        and provide a peaceful escape amidst the 
+        beauty of the great outdoors. Come join 
+        us and find your zen in nature! 
         </p>
       </div>
 
 
         <div class="center-text services-background">
-          <img src="images/yoga/woman meditating.jpg" width="300px" alt="">
+          <img src="images/yoga/kundalini.jpg" width="300px" alt="">
           <h1 class="color-vision"><strong>Kundalini</strong></h1>
           <p>
-          Join our "Mom Yoga" class, designed   
-          to help mothers reduce stress, promote  
-          relaxation, and boost overall   well-being.   
-          You'll leave feeling rejuvenated and ready  
-          to take on the day. Join our supportive   
-          community of fellow moms for an uplifting   
-          experience! 
+            Join our Kundalini class, designed for mothers seeking a 
+            transformative yoga experience. Connect with other 
+            like-minded individuals in a safe and inclusive space 
+            while prioritizing self-care. Awaken your Kundalini 
+            energy through physical exercise, meditation, and breathing 
+            techniques. 
           </p>
         </div>
 
       <div class="center-text services-background"> 
-        <img src="images/yoga/support group 2.jpg" width="300px"alt="">
-        <h1 class="color-vision"><strong>Vinyasa Yoga</strong></h1>
+        <img src="images/yoga/vinyasa yoga2.jpg" width="300px"alt="">
+        <h1 class="color-vision"><strong>Vinyasa</strong></h1>
         <p>
-          In addition to our yoga classes, we   
-          are proud to offer a supportive  
-          community for single mothers.   
-          Our post-class support group is  
-          a safe and welcoming space where  
-          you can connect with other single  
-          <!-- mothers, share your experiences, and  
-          bond over common challenges and triumphs.  
-          Join us and discover the power of community  
-          and connection on your journey as a single mother 
-        </p> -->
+          Join our Vinyasa yoga class, a class designed to build strength, 
+          flexibility, and balance, while cultivating mindfulness and presence. 
+          Suitable for all levels, our Vinyasa class offers modifications 
+          and variations to meet the needs of each individual. 
+         
       </div>
       
       <div class="center-text services-background">
-        <img src="images/yoga/woman meditating.jpg" width="300px" alt="">
-        <h1 class="color-vision"><strong>Hatha Yoga</strong></h1>
+        <img src="images/yoga/yatha yoga.jpg" width="300px" alt="">
+        <h1 class="color-vision"><strong>Hatha</strong></h1>
         <p>
-        Join our "Mom Yoga" class, designed   
-        to help mothers reduce stress, promote  
-        relaxation, and boost overall   well-being.   
-        You'll leave feeling rejuvenated and ready  
-        to take on the day. Join our supportive   
-        community of fellow moms for an uplifting   
-        experience! 
+          Join our Hatha yoga class, where we focus on the fundamentals of 
+          yoga poses and breathing techniques. Our class is designed to 
+          build a strong foundation of alignment, balance, and relaxation. 
+          Suitable for all levels, our Hatha class offers modifications 
+          and variations to meet the needs of each individual. 
         </p>
       </div>
 
       <div class="center-text services-background">
-        <img src="images/yoga/woman meditating.jpg" width="300px" alt="">
+        <img src="images/yoga/support group 2.jpg" width="300px" alt="">
         <h1 class="color-vision"><strong>Encouragement Circle</strong></h1>
         <p>
           Join our post-class encouragement circle,  
