--- a/about copy.html
+++ b/about copy.html
@@ -42,10 +42,7 @@
               <a class="nav-link active" aria-current="page" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="values.html">Values</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
+              <a class="nav-link" href="services.html">Our Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="team.html">The Team</a>
@@ -60,27 +57,54 @@
     </nav>
     <!-- End of navigation bar -->
 
-    <div class="image-div-about">
-      <div class="floating-text center-text">
-        <h1 class="color-vision"><strong>Our Vision</strong></h1>
-        <p class="floating-text-content">
-        "Creating a supportive and <br> inclusive community of single <br>
-        middle-aged moms that offer <br> each other emotional support, <br> 
-        encouragement, knowledge <br> 
-        and advice, to help each other <br>
-        succeed in all areas of life." <br>
-        - Femme Unity, 2023  
-        </p>
+    <!-- Start of carrousel, adapted from https://getbootstrap.com/docs/5.1/components/carousel/ -->
+    <section class="container-fluid p-0">
+      <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/yoga/woman meditating.jpg" class="d-block mx-auto w-100" alt="...">
+            <div class="carousel-caption">
+              <h1 class="d-none d-md-block">Our Vision</h1>
+            
+            </div>
+          </div>
+          <div class="carousel-item">
+            <!-- <img src="images/yoga/woman by lake.jpg" class="d-block mx-auto w-100" alt="..."> -->
+            <div class="carousel-caption">
+              <h3 class="d-none d-md-block"></h3>
+              <p>
+                <a href="#" class="btn btn-outline-light my-md-2">Learn more<span class="d-inline d-md-none"> about Ocean</span></a>
+              </p>
+            </div>
+          </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-      <div class="floating-text center-text"> 
-        <h1 class="color-vision"><strong>Our Values</strong></h1>
-        <p class="floating-text-content color-vision">
-        Fostering a sense of community <br> Providing a safe space <br>
-        Prioritizing self-care <br> Inclusivity
-        </p>
+    </section>
+    <!-- End of carrousel -->
+
+    <!-- A footer with socials -->
+    <footer class="shadow-lg mt-auto py-4 bg-body">
+      <div class="container d-flex justify-content-between align-items-center">
+
+        <ul class="list-unstyled d-flex align-items-center opacity-75">
+        </ul>
       </div>
-      
-    </div>
+    </footer>
+    <!-- End of the grid -->
 
   </body>
 </html>
