--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Our Services</a>
+              <a class="nav-link" href="values.html">Values</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="team.html">The Team</a>
