--- a/services.html
+++ b/services.html
@@ -42,7 +42,10 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="services.html">Our Services</a>
+              <a class="nav-link" href="values.html">Values</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="services.html">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="team.html">The Team</a>
