--- a/values.html
+++ b/values.html
@@ -58,7 +58,7 @@
       </div>
     </nav>
     <!-- End of navigation bar -->
- <div class="image-div-team">
+ <div class="image-div-values">
       <div class="center-text team-background">
         <img src="images/team members/theresia.jpg" width="200px" alt="">
         <h1 class="color-vision2"><strong>Theresia Drooduin</strong></h1>
