--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="values.html">Values</a>
+              <a class="nav-link" href="carousel.html">Values</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="services.html">Services</a>
