--- a/services carousel.html
+++ b/services carousel.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
-    <title>Femme Unity &mdash; Landing Page</title>
+    <title>Femme Unity &mdash; Services</title>
 
     <!-- Google Analytics code goes just below here (check PRJ4 Guide for details) -->
 
@@ -41,7 +41,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="values.html">Values</a>
+              <a class="nav-link" href="services carousel.html">Values</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="services.html">Services</a>
