--- a/about.html
+++ b/about.html
@@ -45,13 +45,14 @@
               <a class="nav-link" href="values.html">Values</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
+              <a class="nav-link" href="services carousel.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="team.html">The Team</a>
-            </li>
+              <a class="nav-link" href="team.html">Team</a>
+            </li>   
             <li class="nav-item">
               <a class="nav-link" href="corporate.html">Corporate</a>
+            </li>
             </li>
             
           </ul>
