--- a/services carousel.html
+++ b/services carousel.html
@@ -35,22 +35,23 @@
         <div class="collapse navbar-collapse mb-2 mb-lg-0 justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services carousel.html">Values</a>
+              <a class="nav-link" href="values.html">Values</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
+              <a class="nav-link active" aria-current="page" href="services carousel.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="team.html">The Team</a>
+              <a class="nav-link" href="team.html">Team</a>
             </li>   
             <li class="nav-item">
               <a class="nav-link" href="corporate.html">Corporate</a>
+            </li>
             </li>
             
           </ul>
