--- a/services.html
+++ b/services.html
@@ -33,25 +33,26 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse mb-2 mb-lg-0 justify-content-end" id="navbarSupportedContent">
+        <!-- <div class="collapse navbar-collapse mb-2 mb-lg-0 justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link active" aria-current="page" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="values.html">Values</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="services.html">Services</a>
+              <a class="nav-link active" aria-current="page" href="services carousel.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="team.html">The Team</a>
-            </li>
+              <a class="nav-link" href="team.html">Team</a>
+            </li>   
             <li class="nav-item">
               <a class="nav-link" href="corporate.html">Corporate</a>
+            </li> -->
             </li>
             
           </ul>
