--- a/team.html
+++ b/team.html
@@ -41,13 +41,13 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="values.html">Values</a>
+              <a class="nav-link active" href="values.html">Values</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
+              <a class="nav-link" href="services carousel.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current href="team.html">The Team</a>
+              <a class="nav-link active" aria-current href="team.html">Team</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="corporate.html">Corporate</a>
