coming soon page

--- a/services carousel.html
+++ b/services carousel.html
@@ -88,7 +88,7 @@
                 for an uplifting experience!  
               </p>
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none">Mom Yoga</span></a>
+                <a href="coming soon.html" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none">Mom Yoga</span></a>
               </p>
             </div>
           </div>
