ontop edit carousel

--- a/services carousel.html
+++ b/services carousel.html
@@ -22,7 +22,7 @@
   <body class="h-100 d-flex flex-column">
 
     <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light ontop">
       <div class="container-fluid">
         <a class="navbar-brand logo-text-color" href="#">
           <img src="images/Logo/logo femme unity.png" width="150" alt="Femme Unity Logo">
@@ -88,7 +88,7 @@
                 for an uplifting experience!  
               </p>
               <p>
-                <a href="coming soon.html" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none">Mom Yoga</span></a>
+                <a href="#" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none">Mom Yoga</span></a>
               </p>
             </div>
           </div>
