--- a/corporate.html
+++ b/corporate.html
@@ -23,23 +23,38 @@
   </head>
   <body data-bs-spy="scroll" data-bs-target="#navbar-corporate" data-bs-smooth-scroll="true">
 
-    <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+     <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
+     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
-          <img src="images/buas-square.svg" width="40" alt="Breda University of Applied Sciences">
+        <a class="navbar-brand logo-text-color" href="#">
+          <img src="images/Logo/logo femme unity.png" width="150" alt="Femme Unity Logo">
+          FEMME UNITY
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+        <div class="collapse navbar-collapse mb-2 mb-lg-0 justify-content-end" id="navbarSupportedContent">
+          <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="corporate.html">Corporate</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="values.html">Values</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services carousel.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="team.html">Team</a>
+            </li>   
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="corporate.html">Corporate</a>
+            </li>
+            
           </ul>
         </div>
       </div>
