--- a/team.html
+++ b/team.html
@@ -41,7 +41,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="values.html">Values</a>
+              <a class="nav-link" href="about.html">Values</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="services carousel.html">Services</a>
