serviced and about fix

--- a/corporate.html
+++ b/corporate.html
@@ -130,33 +130,33 @@
               <tr>
                 <th scope="row">1.</th>
                 <td>211883</td>
-                <td>Value</td>
+                <td>Fostering a sense of community</td>
                 <td>
-                  <a href="index.html">Content title</a>
+                  <a href="values.html">Value 1</a>
                 </td>
               </tr>
               <tr>
                 <th scope="row">2.</th>
                 <td>210057</td>
-                <td></td>
+                <td>Providing a safe space</td>
                 <td>
-                  <a href="#"></a>
+                  <a href="values.html">Value 2</a>
                 </td>
               </tr>
               <tr>
                 <th scope="row">3.</th>
-                <td>204181</td>
-                <td></td>
+                <td>211797</td>
+                <td>Prioritizing self-care</td>
                 <td>
-                  <a href="#"></a>
+                  <a href="values.html">Value 3</a>
                 </td>
               </tr>
               <tr>
                 <th scope="row">4.</th>
-                <td>211797</td>
-                <td></td>
+                <td>204181</td>
+                <td>Inclusivity</td>
                 <td>
-                  <a href="#"></a>
+                  <a href="values.html">Value 4</a>
                 </td>
               </tr>
             </tbody>
