--- a/services carousel.html
+++ b/services carousel.html
@@ -88,7 +88,7 @@
                 for an uplifting experience!  
               </p>
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none">Mom Yoga</span></a>
+                <a href="#" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none"></span></a>
               </p>
             </div>
           </div>
@@ -103,7 +103,7 @@
                 beauty of the great outdoors. Come join 
                 us and find your zen in nature! </p>
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none">Beach Yoga</span></a>
+                <a href="#" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none"></span></a>
               </p>
             </div>
           </div>
@@ -119,7 +119,7 @@
                 techniques. 
              </p>
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none">Kundalini</span></a>
+                <a href="#" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none"></span></a>
               </p>
             </div>
           </div>
@@ -133,7 +133,7 @@
                 and variations to meet the needs of each individual. 
                </p>
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none">Vinyasa</span></a>
+                <a href="#" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none"></span></a>
               </p>
             </div>
           </div>
@@ -147,7 +147,7 @@
                 Suitable for all levels, our Hatha class offers modifications 
                 and variations to meet the needs of each individual. </p>
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none">Hatha</span></a>
+                <a href="#" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none"></span></a>
               </p>
             </div>
           </div>
@@ -161,7 +161,7 @@
                 mothers, share your experiences, and  
                 bond over common challenges and triumphs. </p>
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none">Encouragement Circle</span></a>
+                <a href="#" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none"></span></a>
               </p>
             </div>
           </div>
