commit cards edit

--- a/services carousel.html
+++ b/services carousel.html
@@ -88,7 +88,7 @@
                 for an uplifting experience!  
               </p>
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none"></span></a>
+                <a href="cards.html" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none"></span></a>
               </p>
             </div>
           </div>
@@ -103,7 +103,7 @@
                 beauty of the great outdoors. Come join 
                 us and find your zen in nature! </p>
               <p>
-                <a href="#" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none"></span></a>
+                <a href="cards.html" class="btn btn-outline-light my-md-2">Book<span class="d-inline d-md-none"></span></a>
               </p>
             </div>
           </div>
