values grammar correction

--- a/values.html
+++ b/values.html
@@ -88,7 +88,7 @@
           We believe that every woman, every single mother, deserves to have 
           a space where they feel supported, respected, and heard. We want to 
           create an environment where women can freely express themselves and 
-          hare their personal stories.  
+          share their personal stories.  
 
           Our commitment to providing a safe space goes beyond physical safety. 
           We care about emotional well-being and strive to create an environment 
