about vision fix

--- a/about.html
+++ b/about.html
@@ -65,12 +65,11 @@
       <div class="floating-text center-text">
         <h1 class="color-vision"><strong>Our Vision</strong></h1>
         <p class="floating-text-content">
-        "Creating a supportive and <br> inclusive community of single <br>
-        middle-aged moms that offer <br> each other emotional support, <br> 
-        encouragement, knowledge <br> 
-        and advice, to help each other <br>
-        succeed in all areas of life." <br>
-        - Femme Unity, 2023  
+          In a world where single middle-aged moms are <br>
+          facing the challenges of motherhood alone, we <br>
+          believe that creating support and connection<br>
+          between them is essential, creating a community <br>
+          that uplifts, empowers, and inspires. 
         </p>
       </div>
       <div class="floating-text center-text"> 
