marketing: made the links working

--- a/corporate.html
+++ b/corporate.html
@@ -365,10 +365,13 @@
          <i>Sources
 
           <ul>
-            <li>Statista. (2022, August 18). Consumption frequency of news from social media in the U.S. 2022, by generation. https://www.statista.com/statistics/1124159/us-generational-social-media-news/</li>
-          <li>The 2022 Social Media Users Demographics Guide | Khoros. (n.d.). https://khoros.com/resources/social-media-demographics-guide</li>
-         <li>Bedorin, A. (2017, November 9). Social media and older people: Promising future? • ALL DIGITAL. ALL DIGITAL. https://all-digital.org/social-media-older-people-promising-future/ </li>
-        <li>Statista. (2022b, September 16). Global daily time spent on online networks 2021, by generation. https://www.statista.com/statistics/1314973/global-daily-time-spent-on-social-media-networks-generation/</li>
+            <li>Statista. (2022, August 18). Consumption frequency of news from social media in the U.S. 2022, by generation. <a href="https://www.statista.com/statistics/1124159/us-generational-social-media-news/" > https://www.statista.com/statistics/1124159/us-generational-social-media-news/</a></li>
+          <li>The 2022 Social Media Users Demographics Guide | Khoros. (n.d.). <a href="https://khoros.com/resources/social-media-demographics-guide" > https://khoros.com/resources/social-media-demographics-guide</a></li>
+            </li>
+         <li>Bedorin, A. (2017, November 9). Social media and older people: Promising future? • ALL DIGITAL. ALL DIGITAL. <a href="https://all-digital.org/social-media-older-people-promising-future/" >https://all-digital.org/social-media-older-people-promising-future/</a>
+         </li>
+        <li>Statista. (2022b, September 16). Global daily time spent on online networks 2021, by generation. <a href="https://www.statista.com/statistics/1314973/global-daily-time-spent-on-social-media-networks-generation/" >https://www.statista.com/statistics/1314973/global-daily-time-spent-on-social-media-networks-generation/</a>
+          /</li>
         </ul>
          </i>
          
