content: added link to persona + styleguide

--- a/corporate.html
+++ b/corporate.html
@@ -169,6 +169,8 @@
               </tr>
             </tbody>
           </table>
+
+          <a href="https://edubuas-my.sharepoint.com/:f:/g/personal/210057_buas_nl/Ejb7OOK6YrdJoaZMokBTDf0BiUyyW_6G2HlQ9cL0J5rB8w?e=XV7C4M">Here you can find our persona and style guide written for content.</a>
           
           <!-- End Content, start Production -->
           
