added persona instead of styleguide

--- a/corporate.html
+++ b/corporate.html
@@ -170,7 +170,7 @@
             </tbody>
           </table>
 
-          <a href="https://edubuas-my.sharepoint.com/:f:/g/personal/210057_buas_nl/Ejb7OOK6YrdJoaZMokBTDf0BiUyyW_6G2HlQ9cL0J5rB8w?e=XV7C4M">Here you can find our persona and style guide written for content.</a>
+          <a href="https://edubuas-my.sharepoint.com/:w:/g/personal/210057_buas_nl/EeCOhN-MzDRBgAq2zxlNUQkBeReSU50mwR8EhifGjf_jww?e=0AanUZ" >Here is the link to the document with the persona written for content.</a>
           
           <!-- End Content, start Production -->
           
