production: added testing results

--- a/corporate.html
+++ b/corporate.html
@@ -294,7 +294,19 @@
           </ul>
 
           <p><b>Testing results</b></p> 
-         
+          <p>After analyzing the feedback from users, it can be concluded that the UI and UX of the website have both positive and negative aspects. The visually appealing about page, consistent use of fonts, and easy navigation are some of the positive aspects of the website. The personal touch given to the homepage, such as the inclusion of a video, also makes for a good user experience.</p>
+         <p>Moreover, the highly visually appealing design of the website gives participants a relaxed and calm feeling. Users also appreciated the video on the home page and the carousel on the "services" page, which helped to showcase the offerings of the business. Additionally, the use of Cards on the "team" page was well-received, as it provided a quick overview of the team members.</p>
+         <p>One of the most appreciated aspects of the website was the use of fitting pictures and colors that catered to the target audience. The consistent color use was visually pleasing, and the pictures used were well-suited to the website's theme.</p>
+         <p>However, there were some areas of the website that could be improved. Users pointed out that some alignments were not perfect, and the font usage could be improved, especially in non-heading texts. The users also noted that some details were missing on the team page, such as their roles. Therefore, it is recommended to clarify the roles of the team members and possibly attach their contact details to their Cards.</p>
+         <p>Furthermore, while the website is overall very well-designed for a prototype, it was noted that there were some small mistakes that could be corrected, such as missing quotes or imperfect alignment of text and pictures.</p>
+         <ol>
+          <li>Pictures</li>
+          <li>Colors</li>
+          <li>Fonts</li>
+          <li>Alignements</li>
+         </ol>
+
+         <p>In conclusion, the feedback from users has highlighted both the positive and negative aspects of the UI and UX of the website. By incorporating the suggested improvements, the website can be made even better to provide a great user experience to its visitors.</p>
 
           
           <i><p> See appendix 1 for our testing result videos. </p></i>
