--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="floating-text">
       <h1 class="floating-text-content"><strong>Welcome</strong></h1>
       <p class="floating-text-content">
-        Creating a supportive and inclusive community of single middle-aged  <br> moms that offer each other emotional support, encouragement, and knowledge and advice, <br>
+        Creating a supportive and inclusive community of single middle-aged moms  <br>that offer each other emotional support, encouragement, and knowledge and advice, <br>
         to help each other succeed in all areas of life. <br> space to grow and thrive.
       </p>
     </div>
