services card changes

--- a/services cards.html
+++ b/services cards.html
@@ -123,7 +123,7 @@
             <img class="img-fluid" src="images/yoga/vinyasa.jpg" alt="Vinyasa">
             <div class="card-body">
               <h3 class="color-vision"><strong>Vinyasa</strong></h3>
-              <p class="card-text">Join our Vinyasa yoga class, a class designed to build strength, flexibility, 
+              <p class="card-text">Join our Vinyasa class, a class designed to build strength, flexibility, 
                 and balance, while cultivating mindfulness and presence. Suitable for all levels, our Vinyasa 
                 class offers modifications and variations to meet the needs of each individual.</p>
             </div>
@@ -139,7 +139,7 @@
             <img class="img-fluid" src="images/yoga/hatha.jpg" alt="Hatha">
             <div class="card-body">
               <h3 class="color-vision"><strong>Hatha</strong></h3>
-              <p class="card-text">Join our Hatha yoga class, where we focus on the fundamentals of yoga poses 
+              <p class="card-text">Join our Hatha class, where we focus on the fundamentals of yoga poses 
                 and breathing techniques. Our class is designed to build a strong foundation of alignment, 
                 balance, and relaxation. Suitable for all levels, our Hatha class offers modifications and 
                 variations to meet the needs of each individual.</p>
