--- a/values.html
+++ b/values.html
@@ -85,7 +85,7 @@
         <h1 class="color-vision"><strong>Providing a safe space</strong></h1>
         <p class="floating-text-content-services"> 
           A crucial brand value for Femme Unity is providing a safe space. 
-          We believe that every woman, every single mother, deserves to have 
+          We believe that every woman, every mother, deserves to have 
           a space where they feel supported, respected, and heard. We want to 
           create an environment where women can freely express themselves and 
           share their personal stories.  
