--- a/services.html
+++ b/services.html
@@ -104,7 +104,7 @@
         <img src="images/yoga/vinyasa yoga2.jpg" width="300px"alt="">
         <h1 class="color-vision"><strong>Vinyasa</strong></h1>
         <p>
-          Join our Vinyasa yoga class, a class designed to build strength, 
+          Join our Vinyasa class, a class designed to build strength, 
           flexibility, and balance, while cultivating mindfulness and presence. 
           Suitable for all levels, our Vinyasa class offers modifications 
           and variations to meet the needs of each individual. 
@@ -115,7 +115,7 @@
         <img src="images/yoga/yatha yoga.jpg" width="300px" alt="">
         <h1 class="color-vision"><strong>Hatha</strong></h1>
         <p>
-          Join our Hatha yoga class, where we focus on the fundamentals of 
+          Join our Hatha class, where we focus on the fundamentals of 
           yoga poses and breathing techniques. Our class is designed to 
           build a strong foundation of alignment, balance, and relaxation. 
           Suitable for all levels, our Hatha class offers modifications 
