edit corporate and teams

--- a/index.html
+++ b/index.html
@@ -70,17 +70,32 @@
         to help each other succeed in all areas of life. <br> 
       </p>
     </div>
-
     
-
-    <div class="socials">
-      <a href="http://www.instagram.com/thefemmeunity"><img src="images/icons/instagramw.svg" width="30px" alt=""></a>
-      <a href="http://www.facebook.com/profile.php?id=100089538574047"><img src="images/icons/facebookw.svg" width="30px"
-          alt=""></a>
-      <a href="http://www.linkedin.com/in/femme-unity-19049526b/"><img src="images/icons/linkedinw.svg" width="30px"
-          alt=""></a>
-      <a href="mailto:contactfemmeunity@gmail.com"><img src="images/icons/mailw.png" width="30px" alt=""></a>
-    </div>
-    
+      <!-- A footer with socials -->
+    <footer class="shadow-lg mt-auto py-4 bg-body">
+      <div class="container d-flex justify-content-between align-items-center">
+        <p>
+          © Femme Unity
+        </p>
+        <ul class="list-unstyled d-flex align-items-center opacity-75">
+          <li>
+            <a href="http://www.facebook.com/profile.php?id=100089538574047" target="_blank">
+              <img class="m-2" src="images/icons/facebook.svg" alt="Follow us on" width="26">
+            </a>
+          </li>
+          <li>
+            <a href="http://www.linkedin.com/in/femme-unity-19049526b//" target="_blank">
+              <img class="m-2" src="images/icons/linkedin.svg" alt="Follow us on LinkedIn" width="26">
+            </a>
+          </li>
+          <li>
+            <a href="http://www.instagram.com/thefemmeunity" target="_blank">
+              <img class="m-2" src="images/icons/instagram.svg" alt="Follow us on Instagram" width="26">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+    <!-- End of the grid -->
   </body>
 </html>
