--- a/services carousel.html
+++ b/services carousel.html
@@ -147,6 +147,33 @@
     </section>
     <!-- End of carrousel -->
 
-   
+          <!-- A footer with socials -->
+          <footer class="shadow-lg mt-auto py-4 bg-body">
+            <div class="container d-flex justify-content-between align-items-center">
+              <p>
+                © Femme Unity
+              </p>
+              <ul class="list-unstyled d-flex align-items-center opacity-75">
+                <li>
+                  <a href="http://www.facebook.com/profile.php?id=100089538574047" target="_blank">
+                    <img class="m-2" src="images/icons/facebook.svg" alt="Follow us on" width="26">
+                  </a>
+                </li>
+                <li>
+                  <a href="http://www.linkedin.com/in/femme-unity-19049526b//" target="_blank">
+                    <img class="m-2" src="images/icons/linkedin.svg" alt="Follow us on LinkedIn" width="26">
+                  </a>
+                </li>
+                <li>
+                  <a href="http://www.instagram.com/thefemmeunity" target="_blank">
+                    <img class="m-2" src="images/icons/instagram.svg" alt="Follow us on Instagram" width="26">
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </footer>
+          <!-- End of the grid -->
+       
   </body>
-</html>
+ </html>
+   
