picture names fix

--- a/team.html
+++ b/team.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand logo-text-color" href="#">
-          <img src="images/Logo/logo femme unity.png" width="150" alt="Femme Unity Logo">
+          <img src="images/Logo/femme-unity.png" width="150" alt="Femme Unity Logo">
           FEMME UNITY
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -88,7 +88,7 @@
 
       
         <div class="center-text team-background">
-          <img src="images/team members/mirza cropped.jpg" width="200px" alt="">
+          <img src="images/team members/mirza.jpg" width="200px" alt="">
           <h1 class="color-vision2"><strong>Mirza Ljuca</strong></h1>
           <h3 class="color-vision2"><strong>Welness Coach</strong></h3>
           <p class="floating-text-content-services">
