--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand logo-text-color" href="#">
-          <img src="images/Logo/logo femme unity.png" width="150" alt="Femme Unity Logo">
+          <img src="images/Logo/femme-unity.png" width="150" alt="Femme Unity Logo">
           FEMME UNITY
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
     <!-- End of navigation bar -->
 
     <video id="background-video" autoplay loop muted poster="images/yoga/poster.jpg">
-      <source src="images/yoga/ocean video.mp4" type="video/mp4">
+      <source src="images/yoga/ocean-video.mp4" type="video/mp4">
     </video>
         
     <div class="floating-text">
