--- a/corporate.html
+++ b/corporate.html
@@ -27,7 +27,7 @@
      <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand logo-text-color" href="#">
-          <img src="images/Logo/logo femme unity.png" width="150" alt="Femme Unity Logo">
+          <img src="images/Logo/femme-unity.png" width="150" alt="Femme Unity Logo">
           FEMME UNITY
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
               <a class="nav-link" href="values.html">Values</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services carousel.html">Services</a>
+              <a class="nav-link" href="services-carousel.html">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="team.html">Team</a>
@@ -480,7 +480,7 @@
           <h2 id="management" class="mt-5">Management</h2>
 
           <h4 id="management-1" class="mt-2">Lean Canvas</h4>
-            <img class="m-2" src="images/corporate/lean canvas3.png" alt="Lean canvas 3" width="800">
+            <img class="m-2" src="images/corporate/lean-canvas3.png" alt="Lean canvas 3" width="800">
           </a>
           <br>
           <i> See appendix 7 for all of the versions of the Lean Canvas.</i>
@@ -668,12 +668,12 @@
                 </li>
                 <li>
                   <a href="http://www.linkedin.com/in/femme-unity-19049526b//" target="_blank">
-                    <img class="m-2" src="images/icons/linkedin.svg" alt="Follow us on LinkedIn" width="26">
+                    <img class="m-2" src="images/icons/linkedin.svg" alt="Follow us on" width="26">
                   </a>
                 </li>
                 <li>
                   <a href="http://www.instagram.com/thefemmeunity" target="_blank">
-                    <img class="m-2" src="images/icons/instagram.svg" alt="Follow us on Instagram" width="26">
+                    <img class="m-2" src="images/icons/instagram.svg" alt="Follow us on" width="26">
                   </a>
                 </li>
               </ul>
