--- a/services-cards.html
+++ b/services-cards.html
@@ -45,7 +45,7 @@
               <a class="nav-link" href="values.html">Values</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="services carousel.html">Services</a>
+              <a class="nav-link active" aria-current="page" href="services-carousel.html">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="team.html">Team</a>
@@ -69,7 +69,7 @@
         <!-- Card #1 -->
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="card shadow h-100">
-            <img class="img-fluid" src="images/yoga/woman yoga home page.jpg" alt="Mom Yoga">
+            <img class="img-fluid" src="images/yoga/woman-yoga-hp.jpg" alt="Mom Yoga">
             <div class="card-body">
              <h3 class="color-vision"><strong>Mom Yoga</strong></h3>
               <p class="card-text">Join our Mom Yoga class, designed to help mothers reduce stress, 
@@ -78,7 +78,7 @@
                 uplifting experience!</p>
             </div>
             <div class="card-footer p-2 text-end">
-              <a href="coming soon.html" class="btn btn-primary">Book</a>
+              <a href="coming-soon.html" class="btn btn-primary">Book</a>
             </div>
           </div>
         </div>
@@ -86,7 +86,7 @@
         <!-- Card #2 -->
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="card shadow h-100">
-            <img class="img-fluid" src="images/yoga/beach yoga.jpg" alt="Beach Yoga">
+            <img class="img-fluid" src="images/yoga/beach-yoga.jpg" alt="Beach Yoga">
             <div class="card-body">
               <h3 class="color-vision"><strong>Beach Yoga</strong></h3>
               <p class="card-text">Join our Beach Yoga class for a unique experience connecting 
@@ -95,7 +95,7 @@
                 Come join us and find your zen in nature!</p>
             </div>
             <div class="card-footer p-2 text-end">
-              <a href="coming soon.html" class="btn btn-primary">Book</a>
+              <a href="coming-soon.html" class="btn btn-primary">Book</a>
             </div>
           </div>
         </div>
@@ -112,7 +112,7 @@
                  meditation, and breathing techniques.</p>
             </div>
             <div class="card-footer p-2 text-end">
-              <a href="coming soon.html" class="btn btn-primary">Book</a>
+              <a href="coming-soon.html" class="btn btn-primary">Book</a>
             </div>
           </div>
         </div>
@@ -128,7 +128,7 @@
                 class offers modifications and variations to meet the needs of each individual.</p>
             </div>
             <div class="card-footer p-2 text-end">
-              <a href="coming soon.html" class="btn btn-primary">Book</a>
+              <a href="coming-soon.html" class="btn btn-primary">Book</a>
             </div>
           </div>
         </div>
@@ -145,7 +145,7 @@
                 variations to meet the needs of each individual.</p>
             </div>
             <div class="card-footer p-2 text-end">
-              <a href="coming soon.html" class="btn btn-primary">Book</a>
+              <a href="coming-soon.html" class="btn btn-primary">Book</a>
             </div>
           </div>
         </div>
@@ -153,7 +153,7 @@
         <!-- Card #6 -->
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="card shadow h-100">
-            <img class="img-fluid" src="images/yoga/support group 2.jpg" alt="Encouragement Circle">
+            <img class="img-fluid" src="images/yoga/support-crop.jpg" alt="Encouragement Circle">
             <div class="card-body">
               <h3 class="color-vision"><strong>Encouragement Circle</strong></h3>
               <p class="card-text">Join our post-class encouragement circle, a safe and welcoming space where 
@@ -161,7 +161,7 @@
                 challenges and triumphs.</p>
             </div>
             <div class="card-footer p-2 text-end">
-              <a href="coming soon.html" class="btn btn-primary">Book</a>
+              <a href="coming-soon.html" class="btn btn-primary">Book</a>
             </div>
           </div>
         </div>
