--- a/coming-soon.html
+++ b/coming-soon.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand logo-text-color" href="#">
-          <img src="images/Logo/logo femme unity.png" width="150" alt="Femme Unity Logo">
+          <img src="images/Logo/femme-unity.png" width="150" alt="Femme Unity Logo">
           FEMME UNITY
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
               <a class="nav-link" href="values.html">Values</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services carousel.html">Services</a>
+              <a class="nav-link" href="services-carousel.html">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="team.html">Team</a>
