--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <a class="nav-link" href="values.html">Values</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services carousel.html">Services</a>
+              <a class="nav-link" href="services-carousel.html">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="team.html">Team</a>
