--- a/coming-soon.html
+++ b/coming-soon.html
@@ -53,7 +53,6 @@
             <li class="nav-item">
               <a class="nav-link" href="corporate.html">Corporate</a>
             </li>
-            </li>
             
           </ul>
         </div>
@@ -74,7 +73,7 @@
           Get ready to stretch, breathe, and relax with us. 
           Stay tuned for more details on our launch!
         </p>
-      
+      </div>
     </div>
 
   </body>
