--- a/team.html
+++ b/team.html
@@ -61,7 +61,7 @@
 
  <div class="image-div-team">
       <div class="center-text team-background">
-        <img src="images/team/theresia.jpg" width="200px" alt="">
+        <img src="images/team/theresia.jpg" width="200" alt="">
         <h1 class="color-vision2"><strong>Theresia Drooduin</strong></h1>
         <h3 class="color-vision2"><strong>Yoga Instructor</strong></h3>
         <p class="floating-text-content-services">
@@ -74,7 +74,7 @@
         </p>
       </div>
       <div class="center-text team-background">
-        <img src="images/team/guusje.jpg" width="200px" alt=""> 
+        <img src="images/team/guusje.jpg" width="200" alt=""> 
         <h1 class="color-vision2"><strong>Guusje Bossers</strong></h1>
         <h3 class="color-vision2"><strong>Assistant Instructor</strong></h3>
         <p class="floating-text-content-services">
@@ -85,7 +85,7 @@
         </p>
       </div>
         <div class="center-text team-background">
-          <img src="images/team/mirza.jpg" width="200px" alt="">
+          <img src="images/team/mirza.jpg" width="200" alt="">
           <h1 class="color-vision2"><strong>Mirza Ljuca</strong></h1>
           <h3 class="color-vision2"><strong>Welness Coach</strong></h3>
           <p class="floating-text-content-services">
@@ -97,7 +97,7 @@
           </p>
         </div>
       <div class="center-text team-background"> 
-        <img src="images/team/vanessa.jpg" width="200px" alt="">
+        <img src="images/team/vanessa.jpg" width="200" alt="">
         <h1 class="color-vision2"><strong>Vanessa Sedda</strong></h1>
         <h3 class="color-vision2"><strong>Encouragement Group Specialist</strong></h3>
         <p class="floating-text-content-services">
