--- a/corporate.html
+++ b/corporate.html
@@ -379,7 +379,7 @@
          <i>What is their online behaviour when it comes to media? </i>
          <p>Our target audience participates in online communities or forums with people of similar interests. They connect with old friends, catch up on recent events, see what their family and friends post, share their own posts. Their usage of social media is often very specific for example looking things up that they know they are interested in.</p>
           
-       <ul><b>Sources</b>
+       <ul>Sources
 
             <li>Statista. (2022, August 18). Consumption frequency of news from social media in the U.S. 2022, by generation. <a href="https://www.statista.com/statistics/1124159/us-generational-social-media-news/" > https://www.statista.com/statistics/1124159/us-generational-social-media-news/</a>
             </li>
